[tool.poetry]
name = "corona-analysis"
version = "0.1.0"
description = "Random explorations of the corona virus dataset"
authors = ["Asura Enkhbayar <asura.enkhbayar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.1"
matplotlib = "^3.2.0"
seaborn = "^0.10.0"
pycovid = "^0.1.0"
jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
ipykernel = "^5.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
